# blocks

./: Cargo.toml
assets/data/blocky/blocks/: cobblestone.ron  grass_block.ron
assets/data/blocky/items/: test_item.ron  test_item2.ron
client/: Cargo.toml
client/assets/data/blocky/fonts/: fonts.txt
client/assets/data/blocky/items/: test_item.ron
client/src/: block.rs  chunk_manager.rs  chunky.rs  custom_material.rs  identifier.rs  item.rs  main.rs  player_cam.rs  procedural.rs  registry.rs  texture_atlas.rs  ui.rs
