[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
thiserror = "1"
iyes_loopless = "0.7"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
hashbrown = "0.12"
lazy_static = "1.4"
rand = "0.8"
noise = "0.7"
rand_chacha = "0.3"
bevy_egui = "0.15"
bevy_atmosphere = "0.4"
#image = "0.24"
futures-lite = "1.12"